--- a/mysite/contacts/templates/partials/navbar.html
+++ b/mysite/contacts/templates/partials/navbar.html
@@ -9,10 +9,15 @@
                     <a class="nav-link" href="javascript:void(0)">Link</a>
                 </li>
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Search">
-                <button class="btn btn-primary" type="button">Search</button>
-            </form>
+            <div class="d-flex">
+                <input class="form-control me-2"
+                       type="text"
+                       placeholder="Search"
+                       hx-get="{% url 'search' %}"
+                       hx-trigger="keyup delay:500ms"
+                       hx-target="#contacts_list"
+                       name="query">
+            </div>
         </div>
     </div>
 </nav>
