--- a/mysite/contacts/templates/contacts.html
+++ b/mysite/contacts/templates/contacts.html
@@ -5,6 +5,7 @@
 <form id="add-contact-form"
       hx-post="{% url 'create_contact' %}"
       hx-target="#contacts_list"
+      hx-on:success="this.reset();"
       method="post"
 >
     {% csrf_token %}
